fixed dark mode modal appointments

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,7 @@
     filter: invert(1);
   }
   
+
+ .dark .input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1); /* Invierte los colores del icono del calendario */
+}
